# SpamBayes_Rust

./: .gitignore  README.md
Outlook365/: Cargo.toml  README.md
Outlook365/.cargo/: config.toml
Outlook365/crates/spambayes-addin/: Cargo.toml  build.rs
Outlook365/crates/spambayes-addin/src/: addin_core.rs  class_factory.rs  com_invoke.rs  error_reporter.rs  export.rs  filter.rs  folder_sink.rs  help_content.rs  help_dialog.rs  help_dialog_template.rs  lib.rs  logger.rs  manager_dlg.rs  notification.rs  registry.rs  ribbon.rs  splash_window.rs  statistics.rs  sync_sink.rs  timer.rs  toolbar.rs  tooltip_manager.rs  train.rs  training_bridge.rs  updater.rs  version_manifest.rs  wizard.rs
Outlook365/crates/spambayes-addin/src/gui/: clues_dialog.rs  filter_now_dialog.rs  folder_browser.rs  gtk_runtime.rs  manager_window.rs  mapi_folder_provider.rs  message_boxes.rs  mod.rs  progress_dialog.rs  wizard_window.rs
Outlook365/crates/spambayes-addin/src/gui/tabs/: advanced.rs  calendar.rs  filtering.rs  general.rs  mod.rs  notifications.rs  statistics.rs  training.rs
Outlook365/crates/spambayes-config/: Cargo.toml
Outlook365/crates/spambayes-config/src/: config_chain.rs  errors.rs  folder_id.rs  ini_parser.rs  lib.rs  migration.rs  options.rs  profile.rs
Outlook365/crates/spambayes-config/tests/: integration_multi_profile.rs  integration_sparse_save.rs
Outlook365/crates/spambayes-core/: Cargo.toml
Outlook365/crates/spambayes-core/benches/: tokenizer_bench.rs
Outlook365/crates/spambayes-core/src/: chi2.rs  classifier.rs  lib.rs  tokenizer.rs  word_info.rs
Outlook365/crates/spambayes-mapi/: Cargo.toml  build.rs
Outlook365/crates/spambayes-mapi/src/: errors.rs  folder.rs  lib.rs  message.rs  session.rs  store.rs
Outlook365/crates/spambayes-storage/: Cargo.toml
Outlook365/crates/spambayes-storage/src/: dbm.rs  lib.rs  message_db.rs  migration.rs  pickle.rs  safe_write.rs  traits.rs
Outlook365/docs/: VERSION_MANAGEMENT.md
Outlook365/installer/: README.md  launch_manager.vbs  spambayes_outlook.iss  version_manifest.json
Outlook365/scripts/: bump_version.ps1  bundle_gtk4.ps1
