[workspace]
members = [
    "crates/spambayes-core",
    "crates/spambayes-storage",
    "crates/spambayes-config",
    "crates/spambayes-mapi",
    "crates/spambayes-addin",
]
resolver = "2"

[workspace.package]
version = "0.3.0-alpha.4"
edition = "2021"

[workspace.dependencies]
thiserror = "1"
log = "0.4"
indexmap = "2"
memmap2 = "0.9"
mailparse = "0.15"
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
] }
proptest = "1"
tempfile = "3"
criterion = "0.5"
