[package]
name = "spambayes-config"
version = "0.1.0"
edition = "2021"
description = "Configuration system with INI read/write"

[dependencies]
spambayes-core = { path = "../spambayes-core" }
indexmap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
