[package]
name = "spambayes-config"
version.workspace = true
edition.workspace = true
description = "Configuration system with INI read/write"

[dependencies]
spambayes-core = { path = "../spambayes-core" }
indexmap = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
