[package]
name = "spambayes-core"
version.workspace = true
edition.workspace = true
description = "Pure classifier and tokenizer logic (no Windows dependencies)"

[dependencies]
thiserror = { workspace = true }
mailparse = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "tokenizer_bench"
harness = false
