[package]
name = "spambayes-mapi"
version.workspace = true
edition.workspace = true
description = "MAPI abstraction layer for Outlook message store access"

[dependencies]
spambayes-core = { path = "../spambayes-core" }
thiserror = { workspace = true }
log = { workspace = true }
windows = { workspace = true }
