[package]
name = "spambayes-storage"
version = "0.1.0"
edition = "2021"
description = "Database persistence for classifier token data"

[dependencies]
spambayes-core = { path = "../spambayes-core" }
spambayes-config = { path = "../spambayes-config" }
memmap2 = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
criterion = { workspace = true }
